<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MainFragment">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/lyt"
        android:textSize="18sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/search"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/search" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:text="@string/popular"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_most_viewed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/most_viewed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/txt_most_shared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/most_shared" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/txt_most_emailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/most_emailed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>